--- a/Chi/style/aboutus.css
+++ b/Chi/style/aboutus.css
@@ -6,6 +6,11 @@ body{
     align-items: center;
     font-family: sans-serif;
 }
+a{
+    text-decoration: none;
+}
+
+/* Banner */
 .banner{
     background-image:
     linear-gradient(0,rgba(67, 74, 84, 0.3),rgba(50, 56, 65, 0.3)),
@@ -25,6 +30,8 @@ body{
     bottom: 30px;
     left: 120px;
 }
+
+/* Introduce */
 .intro{
     display: flex;
     width: 80%;
@@ -60,9 +67,13 @@ body{
     line-height: 27px;
     font-size: 15px;
 }
+
+/* Video */
 .video{
     margin-bottom: 50px;
 }
+
+/* Staff */
 .banner-staff{
     background: linear-gradient(0,rgba(155, 143, 124, 0.3),rgba(37, 41, 48, 0.3)),
     url(http://www.nicdarkthemes.com/themes/travel/wp/demo/city-tours/wp-content/uploads/sites/5/2018/11/para-05.jpg) no-repeat center/cover fixed;
@@ -171,6 +182,8 @@ body{
     background: #f3a46b;
 
 }
+
+/* Destinations */
 .destinations{
     width: 80%;
     margin-top: 470px;
@@ -259,6 +272,8 @@ u::after{
     line-height: 13px;
     color: #fff
 }
+
+/* Status */
 .status{
     display: flex;
     width: 100%;
@@ -282,9 +297,63 @@ u::after{
     letter-spacing: 3px;
     font-weight: lighter;
 }
+
+
+/* Fixed */
 .buy{
     position: fixed;
     right: 30px;
     bottom: 30px;
     color: #ffffff;
+    letter-spacing: 1px;
+}
+.buynow{
+    position: absolute;
+    top: 1px;
+    background-color: #f3a46b;
+    left: 5px;
+    font-size: 8px;
+    border-radius: 0px;
+    padding: 3px 5px;
+}
+.circle{
+    background-color: #555555;
+    box-shadow: 0px 0px 20px rgb(0 0 0 / 15%);
+    border-radius: 100%;
+    display: table;
+    width: 65px;
+    height: 65px;
+    text-align: center;
+    font-size: 25px;
+    color: #ffffff !important; 
+}
+.up{
+    position: absolute;
+    font-size: 8px;
+    left: 13px;
+    top: 22px;
+}
+.num{
+    padding-top: 7px;
+    padding-left: 5px;
+    vertical-align: middle;
+    display: table-cell;
+}
+.leaf{
+    position: fixed;
+    bottom: 30px;
+    right: 80px;
+}
+.circle-leaf{
+    background-color: #555555;
+    box-shadow: 0px 0px 20px rgb(0 0 0 / 15%);
+    border-radius: 100%;
+    width: 35px;
+    height: 35px;
+    float: left;
+}
+.leaf-img{
+    position: absolute;
+    top: 10px;
+    left: 10px;
 }
