--- a/Viet/css/packages.css
+++ b/Viet/css/packages.css
@@ -92,7 +92,7 @@ select, input {
 
 .package__option {
   position: relative;
-  width: 1519px;
+  width: 100%;
   z-index: 10;
   padding: 200px 159.4px 30px 159.6px;
 }
