--- a/Thang/style/base.css
+++ b/Thang/style/base.css
@@ -21,7 +21,7 @@
 /* --------- CSS HEADER START --------- */
 
 .header_nav {
-  width: 80%;
+  width: 1200px;
   margin: 0 auto;
   height: 80px;
 }
@@ -32,6 +32,7 @@
   margin: 0 auto;
   align-items: center;
   justify-content: space-between;
+  z-index: 100;
 }
 .header_content .links{
   display: flex;
@@ -181,7 +182,7 @@
   color: var(--text);
 }
 .footer_content {
-  width: 80%;
+  width: 1200px;
   margin: 0 auto;
   background-color: #fff;
   padding: 60px;
@@ -242,7 +243,7 @@
   color: var(--text);
 }
 .footer .footer_footer {
-  width: 80%;
+  width: 1200px;
   margin: 0 auto;
   padding: 10px 30px;
   background-color: var(--orange);
@@ -276,6 +277,9 @@
 
 /* Responsive code start */
 @media screen and (max-width: 1301px){
+  .header_nav {
+    width: 90%;
+  }
   .header_content .logo {
     width: 120px;
   }
@@ -290,11 +294,17 @@
   .header_content .links .hover_sub2 a {
     font-size: 13px;
   }
+  .footer_content {
+    width: 90%;
+  }
   .footer_content .left {
     width: 100%;
   }
   .footer_content .item {
     width: 25%;
+  }
+  .footer .footer_footer {
+    width: 90%;
   }
 }
 @media screen and (max-width: 940px){
