--- a/Thang/style/base.css
+++ b/Thang/style/base.css
@@ -171,7 +171,7 @@
 
 .footer {
   width: 100%;
-  background-image: url(http://www.nicdarkthemes.com/themes/travel/wp/demo/city-tours/wp-content/uploads/sites/5/2018/11/para-07.jpg?id=1845) !important;
+  background-image: url(../images/footer.jpg) !important;
   background-position: center !important;
   background-repeat: no-repeat !important;
   background-size: cover !important;
