--- a/Chi/style/news.css
+++ b/Chi/style/news.css
@@ -19,7 +19,7 @@ body{
 .banner{
     width: 100%;
     height: 310px;
-    background-image:url(http://www.nicdarkthemes.com/themes/travel/wp/demo/city-tours/wp-content/uploads/sites/5/2018/11/para-06.jpg);
+    background-image:url(../images/aboutus-banner.jpeg);
     background-position: center top;
     background-size: cover;
 }
@@ -35,7 +35,7 @@ body{
     margin: 0;
     position: absolute;
     bottom: 68px;
-    left: 136px;
+    left: 10%;
     font-size: 35px;
     line-height: 30px;
     letter-spacing: 0;
@@ -46,11 +46,14 @@ body{
     width: 1200px;
     display: flex;
     margin: 50px 0;
-    flex-wrap: wrap;
+}
+.left, .right{
+    display: flex;
+    flex-direction: column;
 }
 .container-section{
     box-sizing: border-box;
-    width: 47%;
+    width: 570px;
     height: 325px;
     margin: 15px;
     display: flex;
@@ -147,10 +150,44 @@ body{
 
 
 /* RESPONSIVE */
-@media only screen and (max-width: 1000px){
+@media only screen and (max-width: 1160px){
     .container{
         display: flex;
         flex-direction: column;
         align-items: center;
+        width: 100%;
+    }
+    .container-section{
+        width: 100%;
+    }
+    .left, .right{
+        width: 90%;
+        align-items: center;
+    }
+}
+@media only screen and (max-width: 760px){
+    .banner-text{
+        font-size: 30px;
+    }
+    .container{
+        margin: 20px 0;
+    }
+    .container-section{
+        display: flex;
+        flex-direction: column;
+        height: 600px;
+    }
+    .container-section-img, .container-section-text{
+        width: 100%;
+        height: 300px;
+    }
+    .container-section-text{
+        height: 300px;
+    }
+    .container-section-img{
+        height: 400px;
+    }
+    .sect-text-red, .sect-text-blue{
+        order: 2;
     }
 }
