--- a/Viet/css/shop.css
+++ b/Viet/css/shop.css
@@ -11,6 +11,10 @@ p, h1 {
   margin: 0;
 }
 
+a {
+  text-decoration: none;
+}
+
 html {
   box-sizing: border-box;
   letter-spacing: 1px;
@@ -56,8 +60,12 @@ html {
 }
 
 .card-item {
-  width: 25%;
   padding: 15px;
+  position: relative;
+}
+
+.img-card img {
+  width: 100%;
 }
 
 .hotel-name {
@@ -102,6 +110,7 @@ html {
   margin-top: 20px;
   font-weight: 400;
   margin-bottom: 0.5em;
+  flex-wrap: wrap;
 }
 
 .btn-chose {
@@ -117,4 +126,64 @@ html {
   font-family: 'Poppins', sans-serif !important;
   padding: 0.618em 1em;
   cursor: pointer;
+}
+
+.price-old {
+  color: #cdcdcd;
+  font-size: 15px;
+}
+
+.sale {
+  position: absolute;
+  top: 30px !important;
+  right: 30px !important;
+  left: initial !important;
+  border-radius: 0px;
+  min-width: initial;
+  min-height: initial;
+  padding: 8px;
+  line-height: 13px;
+  font-size: 13px;
+  text-transform: uppercase;
+  font-weight: normal;
+  font-family: 'Poppins', sans-serif;
+  background-color: #1bbc9b;
+  color: #fff;
+}
+
+
+@media (min-width: 768px) and (max-width: 1366px) {
+  .shop-cards {
+    width: 97%;
+    margin: auto;
+    margin-top: 50px;
+  }
+
+  .shop-section {
+    padding-top: 32%;
+  }
+
+  .shop-section h1 {
+    width: 100%;
+    padding: 0 30px;
+    margin-bottom: 60px;
+  }
+}
+
+@media (min-width: 375px) and (max-width: 767px) {
+  .shop-cards {
+    width: 97%;
+    margin: auto;
+    margin-top: 50px;
+  }
+
+  .shop-section {
+    padding-top: 72%;
+  }
+
+  .shop-section h1 {
+    width: 100%;
+    padding: 0 68px;
+    margin-bottom: 60px;
+  }
 }
